--- a/maliciou code.html
+++ b/maliciou code.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Scan the QR Code</h1>
-    <img src="qr-code.png" alt="Malicious QR Code">
+    <img src="qr-code.png" alt="qr-code">
 </body>
 </html>
